adds usage and help info to readme

--- a/.verbrc.md
+++ b/.verbrc.md
@@ -7,6 +7,11 @@
 ## Install
 {%= include("install", {save: '--save'}) %}
 
+## Usage
+{%= include("register-middleware") %}
+
+{%= include("help") %}
+
 ## Contributing
 {%= contrib("contributing") %}
 
