--- a/.verb.md
+++ b/.verb.md
@@ -4,7 +4,6 @@
 
 {%= include("assemble-050", {minimum: '0.2.0'}) %}
 
-## Install
 {%= include("install", {save: '--save'}) %}
 
 ## Usage
@@ -13,7 +12,7 @@
 {%= include("help") %}
 
 ## Contributing
-{%= contrib("contributing") %}
+{%= include("contributing") %}
 
 ## Author
 {%= contrib("brian") %}
