--- a/.verb.md
+++ b/.verb.md
@@ -2,20 +2,23 @@
 
 > {%= description %}
 
-{%= include("assemble-050", {minimum: '0.2.0'}) %}
+## Quickstart
+{%= docs("quickstart") %}
 
-{%= include("install", {save: '--save'}) %}
+## Options
+{%= docs("options") %}
 
-## Usage
-{%= include("register-middleware") %}
+## Usage Examples
+{%= docs("examples") %}
 
-{%= include("help") %}
+## Assemble plugins
+{%= related(verb.related.list, {remove: name}) %}
 
 ## Contributing
 {%= include("contributing") %}
 
 ## Author
-{%= contrib("brian") %}
+{%= include("author") %}
 
 ## License
 {%= copyright() %}
